--- a/app/src/main/res/layout/item_marker.xml
+++ b/app/src/main/res/layout/item_marker.xml
@@ -32,12 +32,12 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/marker_id"
-        android:layout_width="30dp"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
         android:layout_marginStart="8dp"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/marker"
         app:layout_constraintTop_toTopOf="parent"
@@ -48,6 +48,7 @@
         android:id="@+id/adress"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -62,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="20dp"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -77,7 +78,7 @@
         android:id="@+id/longitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="20dp"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="16sp"
